--- a/prod/prod-cluster1-values.yaml
+++ b/prod/prod-cluster1-values.yaml
@@ -3,4 +3,4 @@ global:
      tags:
        environment: production
   clusterConfig:
-     name: prod-cluster1 # Name of your cluster so Sysdig can identify it
+     name: crio-lab # Name of your cluster so Sysdig can identify it
