--- a/prod/argocd-sysdig-agent-prod.yaml
+++ b/prod/argocd-sysdig-agent-prod.yaml
@@ -16,7 +16,7 @@ spec:
       - $values/common/common-values.yaml
       - $values/prod/prod-cluster1-values.yaml
   - repoURL: 'https://github.com/sysdigdan/argocd-sysdig-example.git'
-    targetRevision: main
+    targetRevision: master
     ref: values
   project: default
   syncPolicy:
